# bbc-news-bulletin-scraper

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.debian  LICENSE  Makefile  README.md  docker-compose.yml  pylintrc  pyproject.toml  pyrightconfig.json  setup.cfg  start.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot.yml  release.yml  validate.yml
config/: config.yaml
src/: __init__.py  audio_processor.py  config_manager.py  health_monitor.py  main.py  scheduler.py  scraper.py
tests/: __init__.py  test_basic.py
